Customizable landing page API WIP

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@iarna/toml": "^2.2.5",
     "babel-loader": "^8.1.0",
     "cors": "^2.8.5",
-    "hubs-client": "0.0.3",
+    "css-loader": "^3.5.3",
+    "hubs-client": "0.0.4",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
     "selfsigned": "^1.10.7",
     "spoke-client": "0.0.4",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
