--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack-dev-server --mode=development",
-    "build": "webpack --mode=production"
+    "start": "node ./scripts/hubs-sdk.js serve",
+    "build": "node ./scripts/hubs-sdk.js build"
   },
   "license": "MPL-2.0",
   "devDependencies": {
@@ -15,17 +15,24 @@
     "@babel/preset-react": "^7.10.1",
     "@iarna/toml": "^2.2.5",
     "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
+    "commander": "^5.1.0",
     "cors": "^2.8.5",
     "css-loader": "^3.5.3",
     "express-http-proxy": "^1.6.0",
-    "hubs-client": "0.0.6",
+    "hubs-client": "0.0.9",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
+    "rimraf": "^3.0.2",
     "selfsigned": "^1.10.7",
     "spoke-client": "0.0.4",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0"
+  },
+  "dependencies": {
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
